# Chat

./: readme.md
Client/: CMakeLists.txt
Client/res/qrc/: ico.rc  rc.qrc
Client/res/style/: stylesheet.qss
Client/source/cpp/: adduseritem.cpp  applyfriend.cpp  applyfrienditem.cpp  applyfriendlist.cpp  bubbleframe.cpp  chatdialog.cpp  chatitembase.cpp  chatpage.cpp  chatuserlist.cpp  chatuserwidget.cpp  chatview.cpp  clickedbtn.cpp  clickedlabel.cpp  clickedoncelabel.cpp  contactuserlist.cpp  conuseritem.cpp  customizeedit.cpp  findsuccessdlg.cpp  friendlabel.cpp  global.cpp  grouptipitem.cpp  httpmanager.cpp  listitembase.cpp  loadingdialog.cpp  logindialog.cpp  main.cpp  mainwindow.cpp  messagetextedit.cpp  picturebubble.cpp  registerdialog.cpp  resetdialog.cpp  searchlist.cpp  statewidget.cpp  tcpmanager.cpp  textbubble.cpp  timerbtn.cpp  userdata.cpp  usermanager.cpp
Client/source/forms/: adduseritem.ui  applyfriend.ui  applyfrienditem.ui  chatdialog.ui  chatpage.ui  chatuserwidget.ui  conuseritem.ui  findsuccessdlg.ui  friendlabel.ui  grouptipitem.ui  loadingdialog.ui  logindialog.ui  mainwindow.ui  registerdialog.ui  resetdialog.ui
Client/source/headers/: adduseritem.h  applyfriend.h  applyfrienditem.h  applyfriendlist.h  bubbleframe.h  chatdialog.h  chatitembase.h  chatpage.h  chatuserlist.h  chatuserwidget.h  chatview.h  clickedbtn.h  clickedlabel.h  clickedoncelabel.h  contactuserlist.h  conuseritem.h  customizeedit.h  findsuccessdlg.h  friendlabel.h  global.h  grouptipitem.h  httpmanager.h  listitembase.h  loadingdialog.h  logindialog.h  mainwindow.h  messagetextedit.h  picturebubble.h  registerdialog.h  resetdialog.h  searchlist.h  singleton.h  statewidget.h  tcpmanager.h  textbubble.h  timerbtn.h  userdata.h  usermanager.h
Server/ChatServerA/: CMakeLists.txt  config.ini
Server/ChatServerA/grpc/: message.pb.h
Server/ChatServerA/include/: AsioIOServicePool.h  CServer.h  CSession.h  ConfigManager.h  Const.h  Data.h  LogicSystem.h  MsgNode.h  MysqlDao.h  MysqlManager.h  StatusGrpcClient.h
Server/ChatServerA/src/: CServer.cpp  CSession.cpp  ChatServer.cpp  LogicSystem.cpp  MsgNode.cpp  MysqlDao.cpp  MysqlManager.cpp  StatusGrpcClient.cpp
Server/GateServer/: CMakeLists.txt  config.ini
Server/GateServer/grpc/: message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.proto
Server/GateServer/include/: AsioIOServicePool.h  CServer.h  ConfigManager.h  Const.h  HttpConnection.h  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlManager.h  RedisManager.h  StatusGrpcClient.h  VerifyGrpcClient.h
Server/GateServer/src/: CServer.cpp  ConfigManager.cpp  GateServer.cpp  HttpConnection.cpp  LogicSystem.cpp  MysqlDao.cpp  MysqlManager.cpp  RedisConnPool.cpp  RedisConnPool.h  RedisManager.cpp  VerifyGrpcClient.cpp
Server/StatusServer/: CMakeLists.txt  config.ini
Server/StatusServer/grpc/: message.grpc.pb.h
Server/StatusServer/include/: Const.h  Glog.h  MysqlDao.h  RedisConnPool.h  RedisManager.h  Singleton.h  StatusServiceImpl.h
Server/StatusServer/src/: AsioIOServicePool.cpp  Glog.cpp  MysqlDao.cpp  RedisManager.cpp  StatusServer.cpp  StatusServiceImpl.cpp
Server/VarifyServer/: config.json  email.js  package-lock.json  package.json  redis.js  server.js
